force-app/main/default/objects/Call_List__c/Call_List__c.object-meta.xml
<CustomObject>
    <label>Call List</label>
    <nameField>
        <label>Donor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>