force-app/main/default/objects/Call_List__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <label>CampaignId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>