force-app/main/default/objects/Call_List__c/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <formula>If(CONTAINS(OwnerId, &apos;005&apos;),&apos;User&apos;,&apos;Queue&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Type</label>
    <type>Text</type>
</CustomField>