force-app/main/default/objects/Call_List__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <label>Queue_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>