force-app/main/default/objects/Call_List__c/listViews/Dialer_Queue_FR_1_Call_List.listView-meta.xml
<ListView>
    <fullName>Dialer_Queue_FR_1_Call_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Dialer Queue - FR -1</label>
    <queue>Dialer_Queue_FR_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>