force-app/main/default/objects/Call_List__c/listViews/Dialer_Queue_UK_2_Call_List.listView-meta.xml
<ListView>
    <fullName>Dialer_Queue_UK_2_Call_List</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Dialer Queue - UK -2</label>
    <queue>Dialer_Queue_UK_2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>