force-app/main/default/objects/Call_List__c/listViews/Dialer_Queue_UK_3_Call_List.listView-meta.xml
<ListView>
    <fullName>Dialer_Queue_UK_3_Call_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Dialer Queue-UK-3</label>
    <queue>Dialer_Queue_UK_3</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>