force-app/main/default/objects/Call_List__c/listViews/Dialler_Queue_ES_1_Call_List.listView-meta.xml
<ListView>
    <fullName>Dialler_Queue_ES_1_Call_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Dialler Queue - ES - 1</label>
    <queue>Dialler_Queue_ES_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>