force-app/main/default/objects/Call_List__c/listViews/My_Call_List.listView-meta.xml
<ListView>
    <fullName>My_Call_List</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>My Call List</label>
</ListView>